feat(contrib/host): add Go host, grant_jvm_runtime helper, IPv6 normalization, JS writeFile/exec bindings, and CI coverage